lexer/src/parser.output
Grammar

    0 $accept: line $end

    1 line: line regex '\n'
    2     | line '\n'
    3     | ε

    4 regex: regex '|' aexpr
    5      | aexpr

    6 aexpr: aexpr orexp
    7      | orexp

    8 orexp: factor '+'
    9      | factor '*'
   10      | factor '?'
   11      | factor '{' decimalarea '}'
   12      | factor

   13 factor: '(' regex ')'
   14       | '[' optional ']'
   15       | atomic

   16 optional: optional factor
   17         | optional atomic '-' atomic
   18         | atomic '-' atomic
   19         | factor

   20 atomic: 'a'
   21       | 'b'
   22       | 'c'
   23       | 'd'
   24       | 'e'
   25       | 'f'
   26       | 'g'
   27       | 'h'
   28       | 'i'
   29       | 'j'
   30       | 'k'
   31       | 'l'
   32       | 'm'
   33       | 'n'
   34       | 'o'
   35       | 'p'
   36       | 'q'
   37       | 'r'
   38       | 's'
   39       | 't'
   40       | 'u'
   41       | 'v'
   42       | 'w'
   43       | 'x'
   44       | 'y'
   45       | 'z'
   46       | '1'
   47       | '2'
   48       | '3'
   49       | '4'
   50       | '5'
   51       | '6'
   52       | '7'
   53       | '8'
   54       | '9'
   55       | '0'

   56 decimalarea: decimal
   57            | decimal ','
   58            | decimal ',' decimal

   59 decimal: decimal inumber
   60        | inumber

   61 inumber: '1'
   62        | '2'
   63        | '3'
   64        | '4'
   65        | '5'
   66        | '6'
   67        | '7'
   68        | '8'
   69        | '9'
   70        | '0'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2
    '(' (40) 13
    ')' (41) 13
    '*' (42) 9
    '+' (43) 8
    ',' (44) 57 58
    '-' (45) 17 18
    '0' (48) 55 70
    '1' (49) 46 61
    '2' (50) 47 62
    '3' (51) 48 63
    '4' (52) 49 64
    '5' (53) 50 65
    '6' (54) 51 66
    '7' (55) 52 67
    '8' (56) 53 68
    '9' (57) 54 69
    '?' (63) 10
    '[' (91) 14
    ']' (93) 14
    'a' (97) 20
    'b' (98) 21
    'c' (99) 22
    'd' (100) 23
    'e' (101) 24
    'f' (102) 25
    'g' (103) 26
    'h' (104) 27
    'i' (105) 28
    'j' (106) 29
    'k' (107) 30
    'l' (108) 31
    'm' (109) 32
    'n' (110) 33
    'o' (111) 34
    'p' (112) 35
    'q' (113) 36
    'r' (114) 37
    's' (115) 38
    't' (116) 39
    'u' (117) 40
    'v' (118) 41
    'w' (119) 42
    'x' (120) 43
    'y' (121) 44
    'z' (122) 45
    '{' (123) 11
    '|' (124) 4
    '}' (125) 11
    error (256)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    line (53)
        on left: 1 2 3
        on right: 0 1 2
    regex <ru> (54)
        on left: 4 5
        on right: 1 4 13
    aexpr <ru> (55)
        on left: 6 7
        on right: 4 5 6
    orexp <ru> (56)
        on left: 8 9 10 11 12
        on right: 6 7
    factor <ru> (57)
        on left: 13 14 15
        on right: 8 9 10 11 12 16 19
    optional <ru> (58)
        on left: 16 17 18 19
        on right: 14 16 17
    atomic <ru> (59)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 15 17 18
    decimalarea <number> (60)
        on left: 56 57 58
        on right: 11
    decimal <number> (61)
        on left: 59 60
        on right: 56 57 58 59
    inumber <number> (62)
        on left: 61 62 63 64 65 66 67 68 69 70
        on right: 59 60


State 0

    0 $accept: • line $end

    $default  reduce using rule 3 (line)

    line  go to state 1


State 1

    0 $accept: line • $end
    1 line: line • regex '\n'
    2     | line • '\n'

    $end  shift, and go to state 2
    '\n'  shift, and go to state 3
    '('   shift, and go to state 4
    '['   shift, and go to state 5
    'a'   shift, and go to state 6
    'b'   shift, and go to state 7
    'c'   shift, and go to state 8
    'd'   shift, and go to state 9
    'e'   shift, and go to state 10
    'f'   shift, and go to state 11
    'g'   shift, and go to state 12
    'h'   shift, and go to state 13
    'i'   shift, and go to state 14
    'j'   shift, and go to state 15
    'k'   shift, and go to state 16
    'l'   shift, and go to state 17
    'm'   shift, and go to state 18
    'n'   shift, and go to state 19
    'o'   shift, and go to state 20
    'p'   shift, and go to state 21
    'q'   shift, and go to state 22
    'r'   shift, and go to state 23
    's'   shift, and go to state 24
    't'   shift, and go to state 25
    'u'   shift, and go to state 26
    'v'   shift, and go to state 27
    'w'   shift, and go to state 28
    'x'   shift, and go to state 29
    'y'   shift, and go to state 30
    'z'   shift, and go to state 31
    '1'   shift, and go to state 32
    '2'   shift, and go to state 33
    '3'   shift, and go to state 34
    '4'   shift, and go to state 35
    '5'   shift, and go to state 36
    '6'   shift, and go to state 37
    '7'   shift, and go to state 38
    '8'   shift, and go to state 39
    '9'   shift, and go to state 40
    '0'   shift, and go to state 41

    regex   go to state 42
    aexpr   go to state 43
    orexp   go to state 44
    factor  go to state 45
    atomic  go to state 46


State 2

    0 $accept: line $end •

    $default  accept


State 3

    2 line: line '\n' •

    $default  reduce using rule 2 (line)


State 4

   13 factor: '(' • regex ')'

    '('  shift, and go to state 4
    '['  shift, and go to state 5
    'a'  shift, and go to state 6
    'b'  shift, and go to state 7
    'c'  shift, and go to state 8
    'd'  shift, and go to state 9
    'e'  shift, and go to state 10
    'f'  shift, and go to state 11
    'g'  shift, and go to state 12
    'h'  shift, and go to state 13
    'i'  shift, and go to state 14
    'j'  shift, and go to state 15
    'k'  shift, and go to state 16
    'l'  shift, and go to state 17
    'm'  shift, and go to state 18
    'n'  shift, and go to state 19
    'o'  shift, and go to state 20
    'p'  shift, and go to state 21
    'q'  shift, and go to state 22
    'r'  shift, and go to state 23
    's'  shift, and go to state 24
    't'  shift, and go to state 25
    'u'  shift, and go to state 26
    'v'  shift, and go to state 27
    'w'  shift, and go to state 28
    'x'  shift, and go to state 29
    'y'  shift, and go to state 30
    'z'  shift, and go to state 31
    '1'  shift, and go to state 32
    '2'  shift, and go to state 33
    '3'  shift, and go to state 34
    '4'  shift, and go to state 35
    '5'  shift, and go to state 36
    '6'  shift, and go to state 37
    '7'  shift, and go to state 38
    '8'  shift, and go to state 39
    '9'  shift, and go to state 40
    '0'  shift, and go to state 41

    regex   go to state 47
    aexpr   go to state 43
    orexp   go to state 44
    factor  go to state 45
    atomic  go to state 46


State 5

   14 factor: '[' • optional ']'

    '('  shift, and go to state 4
    '['  shift, and go to state 5
    'a'  shift, and go to state 6
    'b'  shift, and go to state 7
    'c'  shift, and go to state 8
    'd'  shift, and go to state 9
    'e'  shift, and go to state 10
    'f'  shift, and go to state 11
    'g'  shift, and go to state 12
    'h'  shift, and go to state 13
    'i'  shift, and go to state 14
    'j'  shift, and go to state 15
    'k'  shift, and go to state 16
    'l'  shift, and go to state 17
    'm'  shift, and go to state 18
    'n'  shift, and go to state 19
    'o'  shift, and go to state 20
    'p'  shift, and go to state 21
    'q'  shift, and go to state 22
    'r'  shift, and go to state 23
    's'  shift, and go to state 24
    't'  shift, and go to state 25
    'u'  shift, and go to state 26
    'v'  shift, and go to state 27
    'w'  shift, and go to state 28
    'x'  shift, and go to state 29
    'y'  shift, and go to state 30
    'z'  shift, and go to state 31
    '1'  shift, and go to state 32
    '2'  shift, and go to state 33
    '3'  shift, and go to state 34
    '4'  shift, and go to state 35
    '5'  shift, and go to state 36
    '6'  shift, and go to state 37
    '7'  shift, and go to state 38
    '8'  shift, and go to state 39
    '9'  shift, and go to state 40
    '0'  shift, and go to state 41

    factor    go to state 48
    optional  go to state 49
    atomic    go to state 50


State 6

   20 atomic: 'a' •

    $default  reduce using rule 20 (atomic)


State 7

   21 atomic: 'b' •

    $default  reduce using rule 21 (atomic)


State 8

   22 atomic: 'c' •

    $default  reduce using rule 22 (atomic)


State 9

   23 atomic: 'd' •

    $default  reduce using rule 23 (atomic)


State 10

   24 atomic: 'e' •

    $default  reduce using rule 24 (atomic)


State 11

   25 atomic: 'f' •

    $default  reduce using rule 25 (atomic)


State 12

   26 atomic: 'g' •

    $default  reduce using rule 26 (atomic)


State 13

   27 atomic: 'h' •

    $default  reduce using rule 27 (atomic)


State 14

   28 atomic: 'i' •

    $default  reduce using rule 28 (atomic)


State 15

   29 atomic: 'j' •

    $default  reduce using rule 29 (atomic)


State 16

   30 atomic: 'k' •

    $default  reduce using rule 30 (atomic)


State 17

   31 atomic: 'l' •

    $default  reduce using rule 31 (atomic)


State 18

   32 atomic: 'm' •

    $default  reduce using rule 32 (atomic)


State 19

   33 atomic: 'n' •

    $default  reduce using rule 33 (atomic)


State 20

   34 atomic: 'o' •

    $default  reduce using rule 34 (atomic)


State 21

   35 atomic: 'p' •

    $default  reduce using rule 35 (atomic)


State 22

   36 atomic: 'q' •

    $default  reduce using rule 36 (atomic)


State 23

   37 atomic: 'r' •

    $default  reduce using rule 37 (atomic)


State 24

   38 atomic: 's' •

    $default  reduce using rule 38 (atomic)


State 25

   39 atomic: 't' •

    $default  reduce using rule 39 (atomic)


State 26

   40 atomic: 'u' •

    $default  reduce using rule 40 (atomic)


State 27

   41 atomic: 'v' •

    $default  reduce using rule 41 (atomic)


State 28

   42 atomic: 'w' •

    $default  reduce using rule 42 (atomic)


State 29

   43 atomic: 'x' •

    $default  reduce using rule 43 (atomic)


State 30

   44 atomic: 'y' •

    $default  reduce using rule 44 (atomic)


State 31

   45 atomic: 'z' •

    $default  reduce using rule 45 (atomic)


State 32

   46 atomic: '1' •

    $default  reduce using rule 46 (atomic)


State 33

   47 atomic: '2' •

    $default  reduce using rule 47 (atomic)


State 34

   48 atomic: '3' •

    $default  reduce using rule 48 (atomic)


State 35

   49 atomic: '4' •

    $default  reduce using rule 49 (atomic)


State 36

   50 atomic: '5' •

    $default  reduce using rule 50 (atomic)


State 37

   51 atomic: '6' •

    $default  reduce using rule 51 (atomic)


State 38

   52 atomic: '7' •

    $default  reduce using rule 52 (atomic)


State 39

   53 atomic: '8' •

    $default  reduce using rule 53 (atomic)


State 40

   54 atomic: '9' •

    $default  reduce using rule 54 (atomic)


State 41

   55 atomic: '0' •

    $default  reduce using rule 55 (atomic)


State 42

    1 line: line regex • '\n'
    4 regex: regex • '|' aexpr

    '\n'  shift, and go to state 51
    '|'   shift, and go to state 52


State 43

    5 regex: aexpr •
    6 aexpr: aexpr • orexp

    '('  shift, and go to state 4
    '['  shift, and go to state 5
    'a'  shift, and go to state 6
    'b'  shift, and go to state 7
    'c'  shift, and go to state 8
    'd'  shift, and go to state 9
    'e'  shift, and go to state 10
    'f'  shift, and go to state 11
    'g'  shift, and go to state 12
    'h'  shift, and go to state 13
    'i'  shift, and go to state 14
    'j'  shift, and go to state 15
    'k'  shift, and go to state 16
    'l'  shift, and go to state 17
    'm'  shift, and go to state 18
    'n'  shift, and go to state 19
    'o'  shift, and go to state 20
    'p'  shift, and go to state 21
    'q'  shift, and go to state 22
    'r'  shift, and go to state 23
    's'  shift, and go to state 24
    't'  shift, and go to state 25
    'u'  shift, and go to state 26
    'v'  shift, and go to state 27
    'w'  shift, and go to state 28
    'x'  shift, and go to state 29
    'y'  shift, and go to state 30
    'z'  shift, and go to state 31
    '1'  shift, and go to state 32
    '2'  shift, and go to state 33
    '3'  shift, and go to state 34
    '4'  shift, and go to state 35
    '5'  shift, and go to state 36
    '6'  shift, and go to state 37
    '7'  shift, and go to state 38
    '8'  shift, and go to state 39
    '9'  shift, and go to state 40
    '0'  shift, and go to state 41

    $default  reduce using rule 5 (regex)

    orexp   go to state 53
    factor  go to state 45
    atomic  go to state 46


State 44

    7 aexpr: orexp •

    $default  reduce using rule 7 (aexpr)


State 45

    8 orexp: factor • '+'
    9      | factor • '*'
   10      | factor • '?'
   11      | factor • '{' decimalarea '}'
   12      | factor •

    '+'  shift, and go to state 54
    '*'  shift, and go to state 55
    '?'  shift, and go to state 56
    '{'  shift, and go to state 57

    $default  reduce using rule 12 (orexp)


State 46

   15 factor: atomic •

    $default  reduce using rule 15 (factor)


State 47

    4 regex: regex • '|' aexpr
   13 factor: '(' regex • ')'

    '|'  shift, and go to state 52
    ')'  shift, and go to state 58


State 48

   19 optional: factor •

    $default  reduce using rule 19 (optional)


State 49

   14 factor: '[' optional • ']'
   16 optional: optional • factor
   17         | optional • atomic '-' atomic

    '('  shift, and go to state 4
    '['  shift, and go to state 5
    ']'  shift, and go to state 59
    'a'  shift, and go to state 6
    'b'  shift, and go to state 7
    'c'  shift, and go to state 8
    'd'  shift, and go to state 9
    'e'  shift, and go to state 10
    'f'  shift, and go to state 11
    'g'  shift, and go to state 12
    'h'  shift, and go to state 13
    'i'  shift, and go to state 14
    'j'  shift, and go to state 15
    'k'  shift, and go to state 16
    'l'  shift, and go to state 17
    'm'  shift, and go to state 18
    'n'  shift, and go to state 19
    'o'  shift, and go to state 20
    'p'  shift, and go to state 21
    'q'  shift, and go to state 22
    'r'  shift, and go to state 23
    's'  shift, and go to state 24
    't'  shift, and go to state 25
    'u'  shift, and go to state 26
    'v'  shift, and go to state 27
    'w'  shift, and go to state 28
    'x'  shift, and go to state 29
    'y'  shift, and go to state 30
    'z'  shift, and go to state 31
    '1'  shift, and go to state 32
    '2'  shift, and go to state 33
    '3'  shift, and go to state 34
    '4'  shift, and go to state 35
    '5'  shift, and go to state 36
    '6'  shift, and go to state 37
    '7'  shift, and go to state 38
    '8'  shift, and go to state 39
    '9'  shift, and go to state 40
    '0'  shift, and go to state 41

    factor  go to state 60
    atomic  go to state 61


State 50

   15 factor: atomic •
   18 optional: atomic • '-' atomic

    '-'  shift, and go to state 62

    $default  reduce using rule 15 (factor)


State 51

    1 line: line regex '\n' •

    $default  reduce using rule 1 (line)


State 52

    4 regex: regex '|' • aexpr

    '('  shift, and go to state 4
    '['  shift, and go to state 5
    'a'  shift, and go to state 6
    'b'  shift, and go to state 7
    'c'  shift, and go to state 8
    'd'  shift, and go to state 9
    'e'  shift, and go to state 10
    'f'  shift, and go to state 11
    'g'  shift, and go to state 12
    'h'  shift, and go to state 13
    'i'  shift, and go to state 14
    'j'  shift, and go to state 15
    'k'  shift, and go to state 16
    'l'  shift, and go to state 17
    'm'  shift, and go to state 18
    'n'  shift, and go to state 19
    'o'  shift, and go to state 20
    'p'  shift, and go to state 21
    'q'  shift, and go to state 22
    'r'  shift, and go to state 23
    's'  shift, and go to state 24
    't'  shift, and go to state 25
    'u'  shift, and go to state 26
    'v'  shift, and go to state 27
    'w'  shift, and go to state 28
    'x'  shift, and go to state 29
    'y'  shift, and go to state 30
    'z'  shift, and go to state 31
    '1'  shift, and go to state 32
    '2'  shift, and go to state 33
    '3'  shift, and go to state 34
    '4'  shift, and go to state 35
    '5'  shift, and go to state 36
    '6'  shift, and go to state 37
    '7'  shift, and go to state 38
    '8'  shift, and go to state 39
    '9'  shift, and go to state 40
    '0'  shift, and go to state 41

    aexpr   go to state 63
    orexp   go to state 44
    factor  go to state 45
    atomic  go to state 46


State 53

    6 aexpr: aexpr orexp •

    $default  reduce using rule 6 (aexpr)


State 54

    8 orexp: factor '+' •

    $default  reduce using rule 8 (orexp)


State 55

    9 orexp: factor '*' •

    $default  reduce using rule 9 (orexp)


State 56

   10 orexp: factor '?' •

    $default  reduce using rule 10 (orexp)


State 57

   11 orexp: factor '{' • decimalarea '}'

    '1'  shift, and go to state 64
    '2'  shift, and go to state 65
    '3'  shift, and go to state 66
    '4'  shift, and go to state 67
    '5'  shift, and go to state 68
    '6'  shift, and go to state 69
    '7'  shift, and go to state 70
    '8'  shift, and go to state 71
    '9'  shift, and go to state 72
    '0'  shift, and go to state 73

    decimalarea  go to state 74
    decimal      go to state 75
    inumber      go to state 76


State 58

   13 factor: '(' regex ')' •

    $default  reduce using rule 13 (factor)


State 59

   14 factor: '[' optional ']' •

    $default  reduce using rule 14 (factor)


State 60

   16 optional: optional factor •

    $default  reduce using rule 16 (optional)


State 61

   15 factor: atomic •
   17 optional: optional atomic • '-' atomic

    '-'  shift, and go to state 77

    $default  reduce using rule 15 (factor)


State 62

   18 optional: atomic '-' • atomic

    'a'  shift, and go to state 6
    'b'  shift, and go to state 7
    'c'  shift, and go to state 8
    'd'  shift, and go to state 9
    'e'  shift, and go to state 10
    'f'  shift, and go to state 11
    'g'  shift, and go to state 12
    'h'  shift, and go to state 13
    'i'  shift, and go to state 14
    'j'  shift, and go to state 15
    'k'  shift, and go to state 16
    'l'  shift, and go to state 17
    'm'  shift, and go to state 18
    'n'  shift, and go to state 19
    'o'  shift, and go to state 20
    'p'  shift, and go to state 21
    'q'  shift, and go to state 22
    'r'  shift, and go to state 23
    's'  shift, and go to state 24
    't'  shift, and go to state 25
    'u'  shift, and go to state 26
    'v'  shift, and go to state 27
    'w'  shift, and go to state 28
    'x'  shift, and go to state 29
    'y'  shift, and go to state 30
    'z'  shift, and go to state 31
    '1'  shift, and go to state 32
    '2'  shift, and go to state 33
    '3'  shift, and go to state 34
    '4'  shift, and go to state 35
    '5'  shift, and go to state 36
    '6'  shift, and go to state 37
    '7'  shift, and go to state 38
    '8'  shift, and go to state 39
    '9'  shift, and go to state 40
    '0'  shift, and go to state 41

    atomic  go to state 78


State 63

    4 regex: regex '|' aexpr •
    6 aexpr: aexpr • orexp

    '('  shift, and go to state 4
    '['  shift, and go to state 5
    'a'  shift, and go to state 6
    'b'  shift, and go to state 7
    'c'  shift, and go to state 8
    'd'  shift, and go to state 9
    'e'  shift, and go to state 10
    'f'  shift, and go to state 11
    'g'  shift, and go to state 12
    'h'  shift, and go to state 13
    'i'  shift, and go to state 14
    'j'  shift, and go to state 15
    'k'  shift, and go to state 16
    'l'  shift, and go to state 17
    'm'  shift, and go to state 18
    'n'  shift, and go to state 19
    'o'  shift, and go to state 20
    'p'  shift, and go to state 21
    'q'  shift, and go to state 22
    'r'  shift, and go to state 23
    's'  shift, and go to state 24
    't'  shift, and go to state 25
    'u'  shift, and go to state 26
    'v'  shift, and go to state 27
    'w'  shift, and go to state 28
    'x'  shift, and go to state 29
    'y'  shift, and go to state 30
    'z'  shift, and go to state 31
    '1'  shift, and go to state 32
    '2'  shift, and go to state 33
    '3'  shift, and go to state 34
    '4'  shift, and go to state 35
    '5'  shift, and go to state 36
    '6'  shift, and go to state 37
    '7'  shift, and go to state 38
    '8'  shift, and go to state 39
    '9'  shift, and go to state 40
    '0'  shift, and go to state 41

    $default  reduce using rule 4 (regex)

    orexp   go to state 53
    factor  go to state 45
    atomic  go to state 46


State 64

   61 inumber: '1' •

    $default  reduce using rule 61 (inumber)


State 65

   62 inumber: '2' •

    $default  reduce using rule 62 (inumber)


State 66

   63 inumber: '3' •

    $default  reduce using rule 63 (inumber)


State 67

   64 inumber: '4' •

    $default  reduce using rule 64 (inumber)


State 68

   65 inumber: '5' •

    $default  reduce using rule 65 (inumber)


State 69

   66 inumber: '6' •

    $default  reduce using rule 66 (inumber)


State 70

   67 inumber: '7' •

    $default  reduce using rule 67 (inumber)


State 71

   68 inumber: '8' •

    $default  reduce using rule 68 (inumber)


State 72

   69 inumber: '9' •

    $default  reduce using rule 69 (inumber)


State 73

   70 inumber: '0' •

    $default  reduce using rule 70 (inumber)


State 74

   11 orexp: factor '{' decimalarea • '}'

    '}'  shift, and go to state 79


State 75

   56 decimalarea: decimal •
   57            | decimal • ','
   58            | decimal • ',' decimal
   59 decimal: decimal • inumber

    '1'  shift, and go to state 64
    '2'  shift, and go to state 65
    '3'  shift, and go to state 66
    '4'  shift, and go to state 67
    '5'  shift, and go to state 68
    '6'  shift, and go to state 69
    '7'  shift, and go to state 70
    '8'  shift, and go to state 71
    '9'  shift, and go to state 72
    '0'  shift, and go to state 73
    ','  shift, and go to state 80

    $default  reduce using rule 56 (decimalarea)

    inumber  go to state 81


State 76

   60 decimal: inumber •

    $default  reduce using rule 60 (decimal)


State 77

   17 optional: optional atomic '-' • atomic

    'a'  shift, and go to state 6
    'b'  shift, and go to state 7
    'c'  shift, and go to state 8
    'd'  shift, and go to state 9
    'e'  shift, and go to state 10
    'f'  shift, and go to state 11
    'g'  shift, and go to state 12
    'h'  shift, and go to state 13
    'i'  shift, and go to state 14
    'j'  shift, and go to state 15
    'k'  shift, and go to state 16
    'l'  shift, and go to state 17
    'm'  shift, and go to state 18
    'n'  shift, and go to state 19
    'o'  shift, and go to state 20
    'p'  shift, and go to state 21
    'q'  shift, and go to state 22
    'r'  shift, and go to state 23
    's'  shift, and go to state 24
    't'  shift, and go to state 25
    'u'  shift, and go to state 26
    'v'  shift, and go to state 27
    'w'  shift, and go to state 28
    'x'  shift, and go to state 29
    'y'  shift, and go to state 30
    'z'  shift, and go to state 31
    '1'  shift, and go to state 32
    '2'  shift, and go to state 33
    '3'  shift, and go to state 34
    '4'  shift, and go to state 35
    '5'  shift, and go to state 36
    '6'  shift, and go to state 37
    '7'  shift, and go to state 38
    '8'  shift, and go to state 39
    '9'  shift, and go to state 40
    '0'  shift, and go to state 41

    atomic  go to state 82


State 78

   18 optional: atomic '-' atomic •

    $default  reduce using rule 18 (optional)


State 79

   11 orexp: factor '{' decimalarea '}' •

    $default  reduce using rule 11 (orexp)


State 80

   57 decimalarea: decimal ',' •
   58            | decimal ',' • decimal

    '1'  shift, and go to state 64
    '2'  shift, and go to state 65
    '3'  shift, and go to state 66
    '4'  shift, and go to state 67
    '5'  shift, and go to state 68
    '6'  shift, and go to state 69
    '7'  shift, and go to state 70
    '8'  shift, and go to state 71
    '9'  shift, and go to state 72
    '0'  shift, and go to state 73

    $default  reduce using rule 57 (decimalarea)

    decimal  go to state 83
    inumber  go to state 76


State 81

   59 decimal: decimal inumber •

    $default  reduce using rule 59 (decimal)


State 82

   17 optional: optional atomic '-' atomic •
